corrected layout issues after react changes and new implemenations.

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ input, select{
   width: 80px;
   flex-grow: inherit;
 }
-.bar {
+.progressEle {
   height: 30px;
   justify-items: center;
   align-self: center;
@@ -101,7 +101,7 @@ input, select{
 span{
   font-weight: bold;
 }
-#data{
+.workoutDiv{
   display: flex;
   flex-wrap: wrap;
   justify-content:center ;
@@ -114,28 +114,34 @@ span{
   /* border: 3px solid rgb(24, 116, 255); */
   /* background-color: rgb(3, 214, 144); */
 }
-#data > div{
+.exerciseDiv{
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: top;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
   width:330px;
   height:fit-content;
   min-height: 250px;
-  /* border: 3px solid rgb(248, 116, 64); */
-  background-color: rgb(235, 215, 252);
+  /* border: 3px solid rgb(47, 164, 241); */
+  /* background-color: rgb(235, 215, 252); */
 }
-#data > div > div{
+/* .infoDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  /* border: 3px solid rgb(194, 135, 9); */
+
+.progressDiv{
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  width:auto;
   height:auto;
   /* border: 3px solid rgb(138, 194, 9); */
-
 }
 .exfin{
   font-style: italic;
@@ -176,7 +182,6 @@ button:hover {
   background: rgb(240, 198, 13);
 }
 .timerBtn{
-
   background-color: #3cf8b0;
   color:black;
   align-self: center;
